fabric/testdata/out/ing_setanta-spp-orchestrator-staging-post-products-wildcard-non-whitelisted.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"Weight(3)
      \u0026\u0026 Path(\"/products/**\") \u0026\u0026 Method(\"POST\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\") -\u003e status(403) -\u003e unverifiedAuditLog(\"sub\")
      -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":403,\\\"detail\\\":\\\"Illegal
      attempt to access whitelisted route\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"5d644909-2f88-11e9-b826-0a3d2718077c","deployment-id":"d-rzj77h4x8wn7gqnwjt6zh18sh","pipeline-id":"l-25dxnxjs786jap63ehk6141r6o"},"name":"setanta-spp-orchestrator-staging-post-products-wildcard-non-whitelisted","namespace":"default"},"spec":{"rules":[{"host":"setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-spp-orchest [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: Weight(3) && Path("/products/**") && Method("POST")
      && Header("X-Forwarded-Proto", "https") -> status(403) -> unverifiedAuditLog("sub")
      -> inlineContent("{\"title\":\"Gateway Rejected\",\"status\":403,\"detail\":\"Illegal
      attempt to access whitelisted route\"}") -> <shunt>
  creationTimestamp: "2019-06-17T13:43:45Z"
  generation: 1
  labels:
    controller-uid: 5d644909-2f88-11e9-b826-0a3d2718077c
    deployment-id: d-rzj77h4x8wn7gqnwjt6zh18sh
    pipeline-id: l-25dxnxjs786jap63ehk6141r6o
  name: setanta-spp-orchestrator-staging-post-products-wildcard-non-whitelisted
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-spp-orchestrator-staging
    uid: 5d644909-2f88-11e9-b826-0a3d2718077c
  resourceVersion: "1357488746"
  uid: ed5119e1-9105-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-orchestrator-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
